feat: Update  analyseDiscussion function adding total emoji received by user adding total angry emoji received by user

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <div id="container">
     <form id ="file_form" action="">
         <div class="form-control">
-            <label for="file_input"> Load Chat history File  </label>
+            <label for="file_input"> Load Chat history File (Load only text file exported properly)  </label>
             <input type="file" id="file_input"/>
         </div>
     </form>
     <section class="users_info">
-           <article class="user_details">
-                <div class="user_name">TEST</div>
-           </article>
+    </section>
+    <section class="emoji_info">
+
     </section>
 </div>
 <script src="./index.js"></script>
