fix:displayanalyseToUserInterface  add hasOwnProperty method to Object emojiPerUser for checking property while iterate over the object

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
             <input type="file" id="file_input"/>
         </div>
     </form>
+    <h3> Details about Key Words like (lol ....) </h3>
     <section class="users_info">
     </section>
+    <h3> Details about Emojis</h3>
     <section class="emoji_info">
-
     </section>
 </div>
 <script src="./index.js"></script>
