adding whatsapp history file exemple

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 <div id="container">
+    <div class="information">
+        <h3>Pay attention that the file is well exported and that the content is formatted as below</h3>
+        <img src="./img/Capture.PNG" alt="whatsapp chat discussions file ">
+    </div>
     <form id ="file_form" action="">
         <div class="form-control">
             <label for="file_input"> Load Chat history File (Load only text file exported properly)  </label>
