--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div id="container">
     <div class="information">
         <h3>Pay attention that the file is well exported and that the content is formatted as below</h3>
-        <img src="./img/Capture.PNG" alt="whatsapp chat discussions file ">
+        <img src="./img/Capture.PNG" alt="exemple of whatsapp discussions history file  ">
     </div>
     <form id ="file_form" action="">
         <div class="form-control">
